--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,160 @@
 body {
-    font-family: 
+    margin: 0;
+    display: flex;
+    font-family: Roboto;
+    flex: 1;
+    flex-direction: column;
+}
+
+.dark {
+    background-color: #1F2937;
+    color: #F9FAF8;
+    flex-shrink: 0;
+    padding: 0px 200px;
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.header > ul {
+    list-style-type: none;
+    display: flex;
+    gap: 15px;
+    justify-content: flex-end;
+    flex-grow: 1;
+    color: #E5E7EB;
+    font-size: 18px;
+    opacity: 80%;
+    
+}
+
+.header > p {
+    font-size: 24px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.subtitle {    
+    font-size: 48px; 
+    font-weight: 900;
+    opacity: 100%;
+}
+
+.content {
+    padding: 200px 0px;
+    display: flex;
+    gap: 20px;
+}
+
+.text {
+    flex: 50;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.subtext {
+    opacity: 80%;
+}
+
+img {
+    width: 400px;
+    height: 200px;
+    object-fit: cover;
+    flex: 50;
+}
+
+button {
+    height: 40px;
+    max-width: 120px;
+    color: #F9FAF8;
+    background-color: #3882F6;
+    font-weight: bold;
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+    font-size: 16px;
+}
+
+.info.header{
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    padding: 40px;
+}
+
+.info {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    padding-bottom : 100px;
+}
+
+.item {
+    max-width: 150px;
+}
+.info > .item > img {
+    border: #3882F6 5px solid;
+    border-radius: 10px;
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    justify-content: center;
+}
+
+.item > .text {
+    text-align: center;
+    opacity: 80%;
+}
+
+.quote {
+    background-color: #E5E7EB;
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: 100;    padding: 100px 300px;
+    opacity: 80%;
+}
+
+.author {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: right;
+    color: black;
+    margin-top: 20px;
+    opacity: 100%;
+}
+
+.call {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 100px 200px;
+    padding: 50px 100px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 5px;
+
+}
+
+.call .subtitle {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.call button {
+    border: #E5E7EB 2px solid;
+    padding: 5px 30px;
+    text-wrap: nowrap;
+}
+
+.copyright {
+    display: flex;
+    justify-content: center;
+    padding: 30px;
+    color: #F9FAF8;
+    background-color: #1F2937;
 }
